force-app/main/default/objects/CSI__c/CSI__c.object-meta.xml
<CustomObject>
    <description>Continual Service Improvement - used with Case Object</description>
    <label>PGi CSI</label>
    <nameField>
        <displayFormat>CSI-{00000}</displayFormat>
        <label>CSI Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PGi CSI</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>