force-app/main/default/objects/CSI__c/fields/Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Number</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>CSI</relationshipLabel>
    <relationshipName>CSI1</relationshipName>
    <type>Lookup</type>
</CustomField>