force-app/main/default/objects/CSI__c/fields/Email_to_be_sent__c.field-meta.xml
<CustomField>
    <fullName>Email_to_be_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email to be sent</label>
    <type>Checkbox</type>
</CustomField>