force-app/main/default/objects/CSI__c/fields/Field_s__c.field-meta.xml
<CustomField>
    <fullName>Field_s__c</fullName>
    <inlineHelpText>Required for Poor Ticket Quality/Incorrect or Missing Information</inlineHelpText>
    <label>Field(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Area of Focus</fullName>
            </value>
            <value>
                <fullName>Call Examples</fullName>
            </value>
            <value>
                <fullName>Client Credentials</fullName>
            </value>
            <value>
                <fullName>Client Viewable: Description/Resolutions</fullName>
            </value>
            <value>
                <fullName>Failed to Attach Logs</fullName>
            </value>
            <value>
                <fullName>Incident Date/Time</fullName>
            </value>
            <value>
                <fullName>Missing Client Contact Info</fullName>
            </value>
            <value>
                <fullName>Product/Service</fullName>
            </value>
            <value>
                <fullName>Root Category/Root Issue/Root Cause</fullName>
            </value>
            <value>
                <fullName>Symptom Main/Sub Category</fullName>
            </value>
            <value>
                <fullName>Template Not Used</fullName>
            </value>
            <value>
                <fullName>Ticket Type</fullName>
            </value>
            <value>
                <fullName>Web Details</fullName>
            </value>
            <value>
                <fullName>Work Notes - Other</fullName>
            </value>
            <value>
                <fullName>Work Notes Do Not Include Troubleshoot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>