force-app/main/default/objects/CSI__c/fields/Review_complete_time__c.field-meta.xml
<CustomField>
    <fullName>Review_complete_time__c</fullName>
    <label>Review complete time</label>
    <type>DateTime</type>
</CustomField>