force-app/main/default/objects/CSI__c/fields/SvsNow_Who_Took_Action__c.field-meta.xml
<CustomField>
    <fullName>SvsNow_Who_Took_Action__c</fullName>
    <description>Historical - SvsNow - Reporting only</description>
    <label>SvsNow Who Took Action</label>
    <length>100</length>
    <type>Text</type>
</CustomField>