force-app/main/default/objects/CSI__c/fields/xxxCreated_Date__c.field-meta.xml
<CustomField>
    <fullName>xxxCreated_Date__c</fullName>
    <formula>DATETIMEVALUE(NOW())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Created</label>
    <type>DateTime</type>
</CustomField>