force-app/main/default/objects/CSI__c/validationRules/PGi_CSI_Fields_field_required.validationRule-meta.xml
<ValidationRule>
    <fullName>PGi_CSI_Fields_field_required</fullName>
    <active>true</active>
    <description>When &quot;What requires review&quot; equals &quot;Poor Ticket Quality/Incorrect or Missing Information&quot;, then the &quot;Field(s)&quot; field is required.</description>
    <errorConditionFormula>(
 INCLUDES( What_Requires_Review__c , &quot;Poor Ticket Quality/Incorrect or Missing Information&quot;)
 &amp;&amp;
 ISBLANK ( Field_s__c))</errorConditionFormula>
    <errorDisplayField>Field_s__c</errorDisplayField>
    <errorMessage>Please choose your Field(s) to be reviewed.</errorMessage>
</ValidationRule>